# converge

./: .envrc.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  justfile
crates/analytics/: Cargo.toml
crates/analytics/src/: batch.rs  engine.rs  ingest.rs  lib.rs  model.rs  suggestor.rs  training.rs
crates/analytics/src/packs/: mod.rs
crates/analytics/tests/: negative.rs  pack_integration.rs  properties.rs  reference_validation.rs
crates/analytics/tests/compile_fail/: pack_cannot_return_fact.rs  pack_cannot_return_fact.stderr  suggestor_cannot_emit_fact.rs  suggestor_cannot_emit_fact.stderr
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/tests/: error_paths.rs
crates/core/: Cargo.toml
crates/core/benches/: engine_bench.rs
crates/core/src/: admission.rs  agent.rs  agents.rs  context.rs  engine.rs  error.rs  eval.rs  experience_store.rs  formation.rs  integrity.rs  invariant.rs  lib.rs  model_selection.rs  profile.rs  prompt.rs  recall.rs  root_intent.rs  truth.rs  validation.rs
crates/core/src/gates/: authorization.rs  hitl.rs  mod.rs  promotion.rs  stop.rs
crates/core/src/traits/: error.rs  llm.rs  promoter.rs  recall.rs  store.rs  validator.rs
crates/core/src/types/: error.rs  frame.rs  id.rs  intent.rs  proposal.rs  tension.rs
crates/core/tests/: chaos.rs  context_properties.rs  formation_integration.rs  happy_paths.rs  more_negative.rs  more_properties.rs  negative.rs  promotion_boundary.rs  properties.rs  soak.rs  truth_pipeline.rs
crates/core/tests/compile_fail/: agent_trait_removed.rs  agent_trait_removed.stderr  context_add_fact_private.rs  context_add_fact_private.stderr  context_snapshot_struct_literal_private.rs  context_snapshot_struct_literal_private.stderr  engine_private_fields.rs  engine_private_fields.stderr  fact_mutate.rs  fact_mutate.stderr  fact_new_reexport_unavailable.rs  fact_new_reexport_unavailable.stderr  register_in_pack_removed.rs  register_in_pack_removed.stderr  tracked_context_add_fact_private.rs  tracked_context_add_fact_private.stderr  validated_proposal_struct_literal.rs  validated_proposal_struct_literal.stderr  validation_report_external_construct.rs  validation_report_external_construct.stderr
crates/experience/: Cargo.toml
crates/experience/src/: lancedb_store.rs  lib.rs  validate.rs
crates/experience/tests/: store_paths.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  provider_selection.rs
crates/kernel/tests/: compile_surface.rs  public_surface.rs
crates/kernel/tests/ui/: pass_formation_surface.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: lib.rs  suggestor.rs
crates/knowledge/src/ingest/: markdown.rs
crates/model/: Cargo.toml
crates/model/src/: formation.rs  lib.rs
crates/model/tests/: compile_surface.rs  properties.rs  surface.rs
crates/model/tests/ui/: fail_validated_deserialize.rs  fail_validated_deserialize.stderr  fail_validated_proposal_construction.rs  fail_validated_proposal_construction.stderr  pass_formation_surface.rs
crates/optimization/: Cargo.toml
crates/optimization/benches/: assignment.rs  cp_comparison.rs  graph.rs
crates/optimization/src/: error.rs  lib.rs  suggestor.rs
crates/optimization/src/assignment/: mod.rs
crates/optimization/src/graph/: dijkstra.rs  matching.rs  mod.rs
crates/optimization/src/packs/: mod.rs  registry.rs  testing.rs
crates/optimization/src/provider/: mod.rs
crates/optimization/tests/: formation_tests.rs  pack_solver_smoke.rs  reference_validation.rs  suggestor_tests.rs
crates/pack/: Cargo.toml
crates/pack/src/: agent.rs  context.rs  effect.rs  fact.rs  formation.rs  governance.rs  lib.rs  pack.rs  pack_suggestor.rs  types.rs
crates/pack/src/gate/: budgets.rs  (+8 more)
crates/pack/tests/: compile_fail.rs
crates/policy/: Cargo.toml
crates/policy/examples/: expense_approval.rs
crates/policy/src/: decision.rs  delegation.rs  engine.rs  flow.rs  lib.rs  main.rs  suggestor.rs  types.rs
crates/policy/tests/: flow_governance_policy.rs  negative.rs  properties.rs  real_cedar_policy.rs  vendor_selection_policy.rs
crates/provider/: Cargo.toml
crates/provider-adapters/: .env.example  Cargo.toml
crates/provider-adapters/examples/: format_matrix.rs  live_chat.rs
crates/provider-adapters/src/: brave.rs  capability_registry.rs  contract.rs  lib.rs  registry_loader.rs  search.rs  tavily.rs
crates/provider-adapters/tests/: live_endpoints.rs
crates/provider-api/: Cargo.toml
crates/provider-api/src/: backend.rs  capability.rs  chat.rs  error.rs  lib.rs  selection.rs
crates/provider/examples/: format_matrix.rs  live_chat.rs
crates/provider/src/: backend.rs  capability_registry.rs  chat.rs  error.rs  feed.rs  lib.rs  model_selection.rs  registry.rs  registry_loader.rs  selection.rs  selection_suggestor.rs
crates/provider/tests/: compile_surface.rs  live_endpoints.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: config.rs  error.rs  handlers.rs  http_auth.rs  lib.rs  main.rs  semantic.rs  sse.rs  state.rs  telemetry.rs
crates/runtime/tests/: integration_tests.rs  negative_tests.rs  wasm_integration.rs  wasm_property_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  error.rs  lib.rs  polars_bridge.rs
examples/analytics-packs/: Cargo.toml
examples/analytics-packs/src/: main.rs
examples/expense-approval/: Cargo.toml
examples/expense-approval/src/: main.rs
examples/fixed-point-vs-budget/: Cargo.toml
examples/fixed-point-vs-budget/src/: main.rs
examples/formation-mixed/: Cargo.toml
examples/formation-mixed/src/: main.rs
examples/intent-codec-loop/: Cargo.toml
examples/intent-codec-loop/src/: main.rs
examples/live-formation/: Cargo.toml
examples/live-formation/src/: main.rs
examples/loan-application/: Cargo.toml
examples/loan-application/src/: main.rs
examples/meeting-scheduler/: Cargo.toml
examples/meeting-scheduler/src/: main.rs
examples/vendor-selection/: Cargo.toml
examples/vendor-selection/src/: main.rs
(+404 files in other folders)
