[workspace]
resolver = "2"
members = [
    "crates/traits",
    "crates/core",
    "crates/mcp",
    "crates/provider",
    "crates/domain",
    "crates/experience",
    "crates/knowledge",
    "crates/optimization",
    "crates/optimization/ortools-sys",
    "crates/analytics",
    "crates/llm",
    "crates/policy",
    "crates/runtime",
    "crates/remote",
    "crates/tool",
    "crates/application",
    "examples/hello-convergence",
    "examples/custom-agent",
    "examples/meeting-scheduler",
    "examples/custom-provider",
    "examples/local-inference",
    "examples/expense-approval",
    "examples/vendor-selection",
    "examples/loan-application",
]
default-members = [
    "crates/traits",
    "crates/core",
    "crates/mcp",
    "crates/provider",
    "crates/domain",
    "crates/experience",
    "crates/knowledge",
    "crates/optimization",
    "crates/optimization/ortools-sys",
    "crates/policy",
    "crates/remote",
    "crates/tool",
    "crates/application",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Labs/converge.zone"
publish = false

[workspace.dependencies]
# Internal crates — path (local dev) + version (crates.io publish)
converge-traits = { path = "crates/traits", version = "1.1.0", features = ["strum"] }
converge-core = { path = "crates/core", version = "1.1.0" }
converge-provider = { path = "crates/provider", version = "1.1.0" }
converge-domain = { path = "crates/domain", version = "1.1.0" }
converge-experience = { path = "crates/experience", version = "1.1.0" }
converge-knowledge = { path = "crates/knowledge", version = "1.1.0" }
converge-optimization = { path = "crates/optimization", version = "1.1.0" }
ortools-sys = { path = "crates/optimization/ortools-sys", version = "1.1.0" }
converge-analytics = { path = "crates/analytics", version = "1.1.0" }
converge-llm = { path = "crates/llm", version = "1.1.0" }
converge-policy = { path = "crates/policy", version = "1.1.0" }
converge-runtime = { path = "crates/runtime", version = "1.1.0" }
converge-remote = { path = "crates/remote", version = "1.1.0" }
converge-tool = { path = "crates/tool", version = "1.1.0" }
converge-mcp = { path = "crates/mcp", version = "1.1.0", default-features = false }
converge-application = { path = "crates/application", version = "1.1.0" }

# Shared dependencies
anyhow = "1"
arrow-array = "57"
arrow-schema = "57"
async-nats = "0.40"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bincode = "1.3"
bitvec = "1"
blake3 = "1.5"
burn = { version = "0.20.0", features = ["ndarray", "train"] }
burn-store = { version = "0.20.0" }
cedar-policy = "2.4"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
colored = "2"
config = "0.14"
crossterm = "0.28"
dashmap = "6.1"
dotenv = "0.15"
ed25519-dalek = "2"
fastembed = "4"
firestore = "0.45"
futures = "0.3"
gherkin = "0.14"
hex = "0.4"
hmac = "0.12"
hostname = "0.4"
hyper = { version = "1.5", features = ["full"] }
indexmap = "2"
jsonwebtoken = "10"
lancedb = { version = "0.26" }
llama-burn = { git = "https://github.com/tracel-ai/models", package = "llama-burn", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
mockall = "0.13"
ndarray = "0.17.2"
num-traits = "0.2"
once_cell = "1.19"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
ordered-float = "4"
parking_lot = "0.12"
pdf-extract = "0.7"
petgraph = "0.7"
polars = { version = "0.51.0", features = ["csv", "lazy", "log", "ndarray", "parquet", "rows"] }
proptest = "1.5"
prost = "0.13"
prost-types = "0.13"
pulldown-cmark = "0.12"
rand = "0.8"
ratatui = "0.29"
rayon = "1.10"
regex = "1.11"
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustls = { version = "0.23", default-features = false, features = ["tls12", "aws_lc_rs"] }
rustls-pemfile = "2"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
smallvec = "1.13"
strum = { version = "0.26", features = ["derive"] }
surrealdb = "1"
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.5"
tokio = { version = "1.48", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
toml = "0.8"
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
typed-builder = "0.20"
urlencoding = "2.1"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
varisat = "0.2"
wasmtime = "43"
wiremock = "0.6"
zeroize = "1"

# Workspace lints — inherited by all crates via [lints] workspace = true
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic patterns
similar_names = "allow"              # Variable naming is subjective
too_many_lines = "allow"             # Verbose tests are intentional
items_after_statements = "allow"     # Common in local struct definitions
ignore_without_reason = "allow"      # Test ignores don't need justification
unnecessary_wraps = "allow"          # Scaffold code may need Result later
overly_complex_bool_expr = "allow"   # assert!(x || !x) is intentional no-op
single_match_else = "allow"          # match is sometimes clearer
semicolon_if_nothing_returned = "allow" # Style preference
module_name_repetitions = "allow"    # Common naming pattern
vec_init_then_push = "allow"         # Clear construction pattern
cast_possible_truncation = "allow"   # Domain indices are small
cast_possible_wrap = "allow"         # Domain indices are small
comparison_chain = "allow"           # if-else is sometimes clearer
if_same_then_else = "allow"          # Intentional for clarity
unused_self = "allow"                # Methods may be extended later
cast_precision_loss = "allow"        # f64 precision loss acceptable for metrics
manual_let_else = "allow"            # if-let is sometimes clearer
if_not_else = "allow"                # Negation is sometimes clearer
map_unwrap_or = "allow"              # map().unwrap_or_else() is clearer

# Release optimized but without as many dependencies, suitable for incremental development
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

# For CI, optimize all dependencies since they are cached. Leave workspace packages, which are uncached,
[profile.ci]
inherits = "quick-release"
opt-level = 1
[profile.ci.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
inherits = "quick-release"
debug = true
