[workspace]
resolver = "2"
members = [
    "crates/model",
    "crates/pack",
    "crates/protocol",
    "crates/kernel",
    "crates/client",
    "crates/core",
    "crates/provider",
    "crates/experience",
    "crates/optimization",
    "crates/runtime",
    "crates/storage",
]
default-members = [
    "crates/model",
    "crates/pack",
    "crates/protocol",
    "crates/kernel",
    "crates/client",
    "crates/core",
    "crates/provider",
    "crates/experience",
    "crates/optimization",
    "crates/storage",
]

[workspace.package]
version = "3.9.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/converge"

[workspace.dependencies]
# Internal crates — path (local dev) + version (crates.io publish)
converge-model = { path = "crates/model", version = "3.9.1" }
converge-pack = { path = "crates/pack", version = "3.9.1", features = ["strum"] }
converge-protocol = { path = "crates/protocol", version = "3.9.1" }
converge-kernel = { path = "crates/kernel", version = "3.9.1" }
converge-client = { path = "crates/client", version = "3.9.1" }
converge-core = { path = "crates/core", version = "3.9.1" }
converge-provider = { path = "crates/provider", version = "3.9.1" }
converge-experience = { path = "crates/experience", version = "3.9.1" }
converge-optimization = { path = "crates/optimization", version = "3.9.1" }
converge-runtime = { path = "crates/runtime", version = "3.9.1" }
converge-storage = { path = "crates/storage", version = "3.9.1", default-features = false }

# Shared dependencies
anyhow = "1"
approx = "0.5"
async-nats = "0.48"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bincode = "1.3"
bitvec = "1"
blake3 = "1.5"
burn = { version = "0.20.0", features = ["ndarray", "train"] }
burn-store = { version = "0.20.0" }
cedar-policy = "2.4"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
colored = "2"
crossterm = "0.28"
criterion = { version = "0.8", default-features = false }
dashmap = "6.1"
ed25519-dalek = "2"
encoding_rs = "0.8"
fastembed = "4"
firestore = "0.49"
futures = "0.3"
gherkin = "0.14"
hex = "0.4"
hmac = "0.13"
hostname = "0.4"
http-body-util = "0.1.3"
hyper = { version = "1.5", features = ["full"] }
indexmap = "2"
insta = "1.42"
jsonwebtoken = { version = "9.3.1", default-features = false, features = ["use_pem"] }
llama-cpp-2 = { version = "0.1.143", default-features = false, features = ["metal"] }
llama-burn = { git = "https://github.com/tracel-ai/models", package = "llama-burn", default-features = false }
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18"
mockall = "0.13"
ndarray = "0.17.2"
num-traits = "0.2"
object_store = "0.13"
once_cell = "1.19"
# Direct Parquet reader/writer. Pinned to the major version that matches the
# workspace `polars` Parquet feature codec, so a single Parquet version
# threads through every consumer (crucible training pipeline, future KB
# persistence, app dataset ingest) without per-extension drift.
parquet = "58"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
ordered-float = "5"
parking_lot = "0.12"
petgraph = "0.7"
calamine = "0.34"
polars = { version = "0.53.0", features = ["csv", "lazy", "log", "ndarray", "parquet", "rows"] }
proptest = "1.5"
prost = "0.13"
prost-types = "0.13"
pulldown-cmark = "0.12"
rand = "0.10"
ratatui = "0.29"
rayon = "1.10"
regex = "1.11"
regex-lite = "0.1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
quick-xml = "0.39"
rustls = { version = "0.23", default-features = false, features = ["tls12", "aws_lc_rs"] }
rustls-pemfile = "2"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_test = "1.0"
serde_yaml = "0.9"
semver = "1"
sha2 = "0.11"
smallvec = "1.13"
static_assertions = "1.1"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.5"
tokio = { version = "1.52", features = ["full", "macros", "sync"] }
tokio-test = "0.4"
trybuild = "1.0"
tokio-stream = { version = "0.1", features = ["net", "sync"] }
toml = "1.1"
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "cors", "limit", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test = "0.2"
typed-builder = "0.20"
url = "2"
urlencoding = "2.1"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
varisat = "0.2"
wiremock = "0.6"
zeroize = "1"

# Workspace lints — inherited by all crates via [lints] workspace = true
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic patterns
similar_names = "allow"              # Variable naming is subjective
too_many_lines = "allow"             # Verbose tests are intentional
items_after_statements = "allow"     # Common in local struct definitions
ignore_without_reason = "allow"      # Test ignores don't need justification
unnecessary_wraps = "allow"          # Scaffold code may need Result later
overly_complex_bool_expr = "allow"   # assert!(x || !x) is intentional no-op
single_match_else = "allow"          # match is sometimes clearer
semicolon_if_nothing_returned = "allow" # Style preference
module_name_repetitions = "allow"    # Common naming pattern
vec_init_then_push = "allow"         # Clear construction pattern
cast_possible_truncation = "allow"   # Domain indices are small
cast_possible_wrap = "allow"         # Domain indices are small
cast_sign_loss = "allow"             # Domain indices are non-negative
cast_lossless = "allow"              # Explicit casts are clearer
cast_precision_loss = "allow"        # f64 precision loss acceptable for metrics
comparison_chain = "allow"           # if-else is sometimes clearer
if_same_then_else = "allow"          # Intentional for clarity
unused_self = "allow"                # Methods may be extended later
manual_let_else = "allow"            # if-let is sometimes clearer
if_not_else = "allow"                # Negation is sometimes clearer
map_unwrap_or = "allow"              # map().unwrap_or_else() is clearer
# Stylistic pedantic noise from clippy 1.94+
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
unreadable_literal = "allow"
unnecessary_literal_bound = "allow"
explicit_iter_loop = "allow"
return_self_not_must_use = "allow"
redundant_closure_for_method_calls = "allow"
needless_raw_string_hashes = "allow"
needless_pass_by_value = "allow"
match_same_arms = "allow"
struct_field_names = "allow"
struct_excessive_bools = "allow"
ref_option = "allow"
ref_option_ref = "allow"
format_collect = "allow"
format_push_string = "allow"
field_reassign_with_default = "allow"
default_trait_access = "allow"
derivable_impls = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"
ignored_unit_patterns = "allow"
implicit_hasher = "allow"
implicit_clone = "allow"
many_single_char_names = "allow"
elidable_lifetime_names = "allow"
assigning_clones = "allow"
cloned_instead_of_copied = "allow"
default_constructed_unit_structs = "allow"
manual_is_multiple_of = "allow"
manual_midpoint = "allow"
manual_range_contains = "allow"
manual_string_new = "allow"
needless_borrow = "allow"
needless_range_loop = "allow"
no_effect_underscore_binding = "allow"
should_implement_trait = "allow"
single_char_pattern = "allow"
too_many_arguments = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_map_or = "allow"
unused_async = "allow"
collapsible_if = "allow"
float_cmp = "allow"                  # Test fixtures use exact float comparison
large_enum_variant = "allow"         # Domain enums are intentionally large
extend_with_drain = "allow"
manual_clamp = "allow"
neg_multiply = "allow"
len_zero = "allow"
missing_fields_in_debug = "allow"

# Release optimized but without as many dependencies, suitable for incremental development
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

# For CI, optimize all dependencies since they are cached. Leave workspace packages, which are uncached,
[profile.ci]
inherits = "quick-release"
opt-level = 1
[profile.ci.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
inherits = "quick-release"
debug = true
