[package]
name = "converge-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "Analytics and ML pipeline for Converge agents"

[dependencies]
polars.workspace = true
calamine = { workspace = true, optional = true }
burn.workspace = true
ndarray.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
proptest.workspace = true
rand.workspace = true
reqwest.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true

# Converge platform dependencies
converge-core.workspace = true
converge-domain.workspace = true
converge-provider.workspace = true

# Object storage (optional)
converge-storage = { workspace = true, optional = true, features = ["local"] }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
storage = ["dep:converge-storage"]
excel = ["dep:calamine"]

[lints]
workspace = true
