[package]
name = "converge-client"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client SDK for deployments that explicitly expose the converge.v1 wire contract"
keywords = ["converge", "client", "grpc", "sdk"]
categories = ["network-programming"]

[dependencies]
converge-protocol.workspace = true
thiserror.workspace = true
tonic.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
