[package]
name = "converge-core"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Converge Agent OS - correctness-first, context-driven multi-agent runtime"
documentation = "https://docs.rs/converge-core"
keywords = ["agent", "runtime", "convergence", "context-driven"]
categories = ["algorithms", "concurrency"]

[dependencies]
async-trait.workspace = true
converge-pack.workspace = true
converge-provider.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
hex.workspace = true
sha2.workspace = true
typed-builder.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-test.workspace = true
proptest.workspace = true
insta = { workspace = true, features = ["json"] }
static_assertions.workspace = true
serde_test.workspace = true
trybuild.workspace = true
criterion = { workspace = true, default-features = false, features = ["cargo_bench_support"] }

[lib]
bench = false

[[bench]]
name = "engine_bench"
harness = false

[lints]
workspace = true
