[package]
name = "converge-experience"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Experience store implementations for the Converge platform"
keywords = ["converge", "ledger", "experience", "audit", "event-sourcing"]
categories = ["database"]

[dependencies]
converge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb = { workspace = true, optional = true }
lancedb = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[features]
default = []
surrealdb = ["dep:surrealdb", "dep:tokio"]
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:tokio", "dep:tokio-stream"]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
