[package]
name = "converge-experience"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Experience store test support and observer bridge for the Converge platform"
keywords = ["converge", "ledger", "experience", "audit", "event-sourcing"]
categories = ["development-tools::testing"]

[dependencies]
converge-core.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
