[package]
name = "converge-kernel"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The curated in-process kernel API for Converge"
keywords = ["converge", "kernel", "engine", "runtime"]
categories = ["algorithms"]

[dependencies]
converge-core.workspace = true
converge-model.workspace = true
converge-pack.workspace = true
converge-provider-api.workspace = true
converge-provider.workspace = true
converge-optimization.workspace = true

[dev-dependencies]
trybuild.workspace = true

[lints]
workspace = true
