[package]
name = "converge-knowledge"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A self-learning knowledgebase with vector search, gRPC, and MCP interfaces"
keywords = ["vector-database", "knowledge-base", "machine-learning", "embeddings", "grpc"]
categories = ["database", "science"]
exclude = ["target/*", "target/"]

[dependencies]
# Converge contract
converge-pack.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# gRPC / Protobuf
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bincode.workspace = true

# Markdown parsing
pulldown-cmark.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
async-trait.workspace = true

# Math operations
rand.workspace = true

# HTTP client for OpenAI embeddings
reqwest.workspace = true

# Pattern matching for routing
regex.workspace = true


# CLI
clap = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5" }
tempfile.workspace = true
tokio-test = "0.4"

[build-dependencies]
tonic-build.workspace = true

[features]
default = ["cli", "grpc"]
cli = ["clap"]
grpc = []
memory-only = []

[[bin]]
name = "converge-knowledge"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "converge-knowledge-server"
path = "src/bin/server.rs"
required-features = ["grpc"]

[[bench]]
name = "vector_search"
harness = false

[lints]
workspace = true
