[package]
name = "converge-model"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The curated semantic model surface for Converge"
keywords = ["converge", "model", "fact", "proposal"]
categories = ["algorithms"]

[dependencies]
converge-core.workspace = true
converge-pack.workspace = true

[dev-dependencies]
converge-core.workspace = true
serde_json.workspace = true
proptest.workspace = true
trybuild = "1.0"

[lints]
workspace = true
