[package]
name = "converge-optimization"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Optimization algorithms for converge.zone - Rust reimplementation of OR-Tools subset"
keywords = ["optimization", "constraint", "graph", "scheduling", "assignment"]
categories = ["algorithms", "mathematics", "science"]
exclude = ["target/*", "target/", "build/*", "build/"]

[dependencies]
# Core
thiserror.workspace = true
tracing.workspace = true

# Converge integration
converge-pack = { workspace = true, features = ["kernel-authority"] }
converge-core.workspace = true
converge-model.workspace = true
async-trait.workspace = true

# Data structures
petgraph.workspace = true
indexmap.workspace = true
smallvec.workspace = true
bitvec.workspace = true

# Numeric
num-traits.workspace = true
ordered-float.workspace = true

# Parallelism
rayon.workspace = true

# Serialization (for problem/solution I/O)
serde.workspace = true
serde_json.workspace = true

# SAT solver for native CP
varisat = { workspace = true, optional = true }

[dev-dependencies]
converge-provider-api.workspace = true
criterion = { version = "0.8" }
proptest.workspace = true
rand.workspace = true
approx = "0.5"
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []
sat = ["dep:varisat"]
full = ["sat"]

[[bench]]
name = "assignment"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "cp_comparison"
harness = false
required-features = ["sat"]

[lints]
workspace = true
