[package]
name = "converge-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "LicenseRef-Proprietary"
publish = false
description = "Cedar-based Policy Decision Point for Converge gate model"
documentation = "https://docs.rs/converge-policy"
keywords = ["converge", "policy", "cedar", "authorization", "governance"]
categories = ["authentication"]
include = ["src/**/*", "policies/**/*", "Cargo.toml", "LICENSE"]

[lib]
name = "converge_policy"
path = "src/lib.rs"

[[bin]]
name = "converge-policy"
path = "src/main.rs"

[dependencies]
converge-core.workspace = true

# Policy engine
cedar-policy.workspace = true

# HTTP server
axum.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Delegation tokens
ed25519-dalek.workspace = true
rand.workspace = true
ciborium.workspace = true
base64.workspace = true

# State (optional, for decision tracking)
redis = { version = "1.1", features = ["tokio-comp"], optional = true }

[features]
default = ["redis-tracking"]
redis-tracking = ["redis"]

[lints]
workspace = true
