[package]
name = "converge-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "Cedar-based Policy Decision Point for Converge gate model"
documentation = "https://docs.rs/converge-policy"
keywords = ["converge", "policy", "cedar", "authorization", "governance"]
categories = ["authentication"]
include = ["src/**/*", "policies/**/*", "Cargo.toml", "LICENSE"]

[lib]
name = "converge_policy"
path = "src/lib.rs"

[[bin]]
name = "converge-policy"
path = "src/main.rs"

[dependencies]
converge-core.workspace = true
converge-pack.workspace = true
async-trait.workspace = true

# Policy engine
cedar-policy.workspace = true

# HTTP server
axum.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Delegation tokens
ed25519-dalek.workspace = true
ciborium.workspace = true
base64.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest.workspace = true
tower.workspace = true
